[gd_scene load_steps=19 format=3 uid="uid://c6aigfqfw3rwu"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_enk7o"]
[ext_resource type="FontFile" uid="uid://cb25e36ag81ju" path="res://assets/fonts/PixelOperator8.ttf" id="1_w1v4t"]
[ext_resource type="Texture2D" uid="uid://m65yenwq1o5r" path="res://assets/sprites/henrik.png" id="3_c6snd"]
[ext_resource type="Texture2D" uid="uid://xwfdqsi35h5j" path="res://assets/sprites/tabea.png" id="4_bq7r0"]
[ext_resource type="PackedScene" uid="uid://ehpaempejv58" path="res://scenes/pause_menu.tscn" id="5_leux1"]
[ext_resource type="FontFile" uid="uid://bea22tcsj8788" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="5_osbuy"]
[ext_resource type="Texture2D" uid="uid://18s6in0jq12k" path="res://assets/sprites/ammo.png" id="6_bhvs4"]
[ext_resource type="PackedScene" uid="uid://da8cxn8q226je" path="res://scenes/dutch_ingredient.tscn" id="8_4w8fk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6id8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j7kkb"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm52p"]
atlas = ExtResource("6_bhvs4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bcl0"]
atlas = ExtResource("6_bhvs4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqslj"]
atlas = ExtResource("6_bhvs4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcbjn"]
atlas = ExtResource("6_bhvs4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66akk"]
atlas = ExtResource("6_bhvs4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebglg"]
atlas = ExtResource("6_bhvs4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_eyfip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm52p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bcl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqslj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcbjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66akk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebglg")
}],
"loop": true,
"name": &"ammo",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_mphff"]
line_spacing = 1.0
font_size = 24
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_enk7o")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -7.0
offset_right = 7.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_w1v4t")

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Henrik" type="Sprite2D" parent="."]
position = Vector2(69, 57)
scale = Vector2(0.172289, 0.156831)
texture = ExtResource("3_c6snd")

[node name="Tabea" type="Sprite2D" parent="."]
position = Vector2(1077, 58)
scale = Vector2(0.172289, 0.156831)
texture = ExtResource("4_bq7r0")

[node name="HP_bar_henrik" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 139.0
offset_top = 10.0
offset_right = 263.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0.901961, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_osbuy")
theme_override_styles/background = SubResource("StyleBoxFlat_e6id8")
theme_override_styles/fill = SubResource("StyleBoxFlat_j7kkb")
step = 1.0
value = 100.0

[node name="HP_bar_tabea" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 882.0
offset_top = 14.0
offset_right = 1006.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.901961, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_osbuy")
theme_override_styles/background = SubResource("StyleBoxFlat_e6id8")
theme_override_styles/fill = SubResource("StyleBoxFlat_j7kkb")
value = 100.0
fill_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("5_leux1")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -78.0
offset_right = -249.0
offset_bottom = -78.0
rotation = 0.00224143
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ammo_henrik" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(175, 75)
sprite_frames = SubResource("SpriteFrames_eyfip")
animation = &"ammo"

[node name="ammo_tabea" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(969, 75)
sprite_frames = SubResource("SpriteFrames_eyfip")
animation = &"ammo"
flip_h = true

[node name="MessageFrame" type="Polygon2D" parent="."]
modulate = Color(0.383406, 0.744011, 0.363321, 1)
position = Vector2(-29, -54.5)
scale = Vector2(1.21859, 0.825)
polygon = PackedVector2Array(300, 100, 700, 100, 700, 300, 502.032, 300, 300, 300)

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -237.0
offset_top = 33.0
offset_right = 249.0
offset_bottom = 196.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_w1v4t")
text = "Message"
label_settings = SubResource("LabelSettings_mphff")
horizontal_alignment = 1
autowrap_mode = 3

[node name="dutch_ingredient" parent="." instance=ExtResource("8_4w8fk")]
position = Vector2(981, 133)

[node name="dutch_ingredient2" parent="." instance=ExtResource("8_4w8fk")]
position = Vector2(1013, 133)

[node name="dutch_ingredient3" parent="." instance=ExtResource("8_4w8fk")]
position = Vector2(1044, 134)

[node name="dutch_ingredient4" parent="." instance=ExtResource("8_4w8fk")]
position = Vector2(1076, 136)

[node name="dutch_ingredient5" parent="." instance=ExtResource("8_4w8fk")]
position = Vector2(1107, 137)

[node name="dutch_ingredient6" parent="." instance=ExtResource("8_4w8fk")]
position = Vector2(1138, 137)

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
